fixed about alignment

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -18,7 +18,8 @@
         height: 100%;
         display: flex;
         justify-content: space-around;
-        align-items: flex-end;
+        align-items: flex-start;
+        align-content: space-between;
         h3 {
             font-size: 2rem;
             color: rgba(255,255,0,1);
